--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav {
   left: 10%;
   font-size: 60px;
   font-weight: 300;
+  font-weight: bold;
   text-align: center;
   color: white;
   border: 1px solid gray;
