--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav {
 }
 
 .sliderItem:nth-child(1) .sliderBg {
-  background-color: navy;
+  background-color: teal;
 }
 .sliderItem:nth-child(2) .sliderBg {
   background-color: rebeccapurple;
